--- a/index.html
+++ b/index.html
@@ -455,7 +455,7 @@ font-size:x-small;
     </div>
     <div id="ec">
     
-      <iframe style="height:1000px;width:100% ;"src="https://gvssmark.github.io/ibra/committee.html" allowTransparency="true" background="transparent"></iframe>
+      <iframe style="height:1000px;width:100% ;"src="https://gvssmark.github.io/ibraec/committee.html" allowTransparency="true" background="transparent"></iframe>
         
         <br>
     </div>
